[build-system]
requires = ['setuptools', 'poetry_core>=1.0']
build-backend = 'poetry.core.masonry.api'

[tool.poetry]
name = 'jfb'
version = '1.0'
description = "Jax Freeze Bug."
# license = 'MIT'
authors = ['Neil Girdhar <mistersheik@gmail.com>']
readme = 'README.rst'
repository = 'https://github.com/NeilGirdhar/jax_freeze_bug'
classifiers = [
    'Development Status :: 1 - Planning',
    'Intended Audience :: Developers',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'Typing :: Typed',
    'License :: Other/Proprietary License']

[tool.poetry.dependencies]
python = '>=3.10, <3.11'
dm-haiku = {git = "https://github.com/deepmind/dm-haiku.git"}
efax = '>=1.9'
jax = '>=0.4.2'
jaxopt = '>=0.5.5'
more-itertools = '>=8.14'
numpy = '>=1.22'
tensorflow = '>=2.11.0'
tensorflow_datasets = '>=4.5.2'
tjax = '>=0.25.3'

[tool.poetry.group.dev.dependencies]
flake8 = '>=3.9'
isort = '>=5.8'
jupyter = '>=1'
mypy = '>=0.930'
pylint = '>=2.8'
pyproject-flake8 = ">=0.0.1a2"
pyright = ">=0.0.13"
pylint-pytest = ">=1.1.2"

[tool.poetry.scripts]
jfb = 'jfb.one:cli'

[tool.flake8]
max-line-length = 100
extend-ignore = "E741"
per-file-ignores = """
    __init__.py: F401, F403
"""

[tool.isort]
line_length = 100
multi_line_output = 0
skip_glob = ['.pytype/*.py']

[tool.pycodestyle]
max-line-length = 100
exclude = ['__init__.py', '__pycache__', 'backup', 'README.rst', 'todo.txt']

[tool.pytest.ini_options]
addopts = '--disable-warnings'

[tool.pytype]
disable = 'ignored-abstractmethod'

[tool.pylint.master]
jobs = 0
load-plugins=['pylint_pytest']
extension-pkg-whitelist = [
    'PySide6',
    'matplotlib.backends']

[tool.pylint.messages_control]
disable = [
    'abstract-method',
    'arguments-differ',
    'duplicate-code',
    'invalid-name',
    'invalid-unary-operand-type',
    'missing-docstring',
    'no-member',
    'self-cls-assignment',
    'too-few-public-methods',
    'too-many-ancestors',
    'too-many-arguments',
    'too-many-branches',
    'too-many-instance-attributes',
    'too-many-locals',
    'too-many-return-statements',
    'too-many-statements',
    'unused-argument']
enable= [
    'useless-suppression',
    'use-symbolic-message-instead']

[tool.pylint.reports]
output-format = 'colorized'

[tool.pylint.similarities]
min-similarity-lines = 20
ignore-imports = 'yes'

[tool.pyright]
stubPath = ""
reportPrivateImportUsage = false
# reportUnnecessaryTypeIgnoreComment = true

[tool.mypy]
plugins = 'tjax.mypy_plugin'
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
# disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
no_implicit_optional = true
pretty = false
show_error_codes = true
show_error_context = false
strict_equality = true
warn_redundant_casts = true
# warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

# https://github.com/matplotlib/matplotlib/issues/20504
# https://github.com/networkx/networkx/pull/5127
[[tool.mypy.overrides]]
module = ['jaxopt', 'matplotlib', 'matplotlib.axes', 'matplotlib.colors', 'matplotlib.legend',
       'matplotlib.pyplot', 'matplotlib.figure', 'matplotlib.backends.backend_qt5agg', 'pyqtgraph',
       'pyqtgraph.parametertree', 'pyqtgraph.parametertree.parameterTypes', 'networkx', 'pandas',
       'progressbar', 'pylint', 'seaborn', 'tensorflow_datasets.core',
       'tensorflow_datasets.core.features', 'tensorflow_datasets.core.features.tensor_feature',
       'tensorflow.python.data.ops.dataset_ops', 'tensorflow.python.framework.dtypes',
       'tensorflow.python.data.ops.iterator_ops', 'tensorflow_datasets']
ignore_missing_imports = true
